--- a/jarvis/requirements.txt
+++ b/jarvis/requirements.txt
@@ -10,6 +10,7 @@ Brotli==1.1.0
 certifi==2025.7.14
 charset-normalizer==3.4.2
 click==8.1.8
+cryptography==43.0.3
 dataclasses-json==0.6.7
 distro==1.9.0
 fastapi==0.116.1
