--- a/jarvis/requirements.txt
+++ b/jarvis/requirements.txt
@@ -36,6 +36,7 @@ jsonpointer==3.0.0
 langchain==0.3.26
 langchain-community==0.3.27
 langchain-core==0.3.70
+langchain-mcp-adapters==0.1.9
 langchain-ollama==0.3.5
 langchain-openai==0.3.28
 langchain-text-splitters==0.3.8
