🔧 Remove all large files and update .gitignore
- Remove remaining large binary files (data_level0.bin files > 100MB)
- Update .gitignore to exclude all large database and binary files
- Prevent future commits of large files that exceed GitHub limits
- Comprehensive exclusion patterns for vector store data

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,14 @@ chroma.sqlite3
 data/chroma_db/
 data/backups/*/vector_store/
 data/backups/*/*.bin
+jarvis/data/chroma_db/
+jarvis/data/backups/
+
+# Exclude all large binary files
+**/data_level0.bin
+**/chroma.sqlite3
+**/*.bin
+**/*.sqlite3
 
 # Python cache
 __pycache__/
